2012-01-24    <simleo@neuron.crs4.it>

	* bl/vl/kb/drivers/omero/utils.py (ome_hash): changed to hash
	objects by their oldest ancestor's class.

2012-01-23    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/snp_markers_set.py
	(SNPMarkersSet.load_alignments): Now we use the new, hopefully
	faster, mset-based convention for alignment storing/retrieval.

2012-01-23    <simleo@neuron.crs4.it>

	* bl/vl/individual/pedigree.py (up_propagate_front): fixed problem
	where it might add individuals not included in the selected ones
	-- simleo & lianas.

2012-01-19    <simleo@neuron.crs4.it>

	* bl/vl/kb/drivers/omero/wrapper.py (OmeroWrapper): added
	__update_constraints__. This is called by kb object setters and
	provides a hook for updating properties (in particular, unique
	keys) depending on other attributes -- simleo & lianas

	* bl/vl/kb/drivers/omero/demographic.py (Demographic): fixed UK
	components -- simleo & lianas

2012-01-11    <simleo@neuron.crs4.it>

	* bl/vl/individual/pedigree.py (down_propagate_front): fixed a bug
	where the children dict was being looked up by individual id
	instead of individual.

2011-12-21  Luca Lianas  <luca@tensa-zangetsu>

	* bl/vl/kb/drivers/omero/wrapper.py: the __getattr__ of the kb
	objects will now resolve encapsulated objects reading them
	directly from the cache or from Omero.

2011-11-22  Luca Lianas  <luca@tensa-zangetsu>

	* bl/vl/kb/drivers/omero/proxy.py: added a method for retrieving
	all vessels related to an individual.

2011-11-22    <simleo@neuron.crs4.it>

	* bl/vl/kb/drivers/omero/proxy.py: added a method for getting a
	container object by label.

2011-11-04    <zag@manzanillo>

	* bl/vl/genotype/algo.py (hwe_probabilites): bugfx: Added handling
	of the n_a ==0 corner case.

2011-11-02    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/admin.py (Admin): Added basic admin support.

	* bl/vl/kb/drivers/omero/proxy.py (Proxy.create_markers): Added
	ref_rs_genome, dbsnp_build

2011-11-01    <zag@manzanillo>
